--- a/package.xml
+++ b/package.xml
@@ -10,11 +10,12 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>geometry_msgs</depend>
-  <depend>joy</depend>
   <depend>nav_msgs</depend>
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
+
+  <exec_depend>joy</exec_depend>
 
   <test_depend>rostest</test_depend>
   <test_depend>roslint</test_depend>
