--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
   <depend>roscpp</depend>
   <depend>sensor_msgs</depend>
   <depend>std_msgs</depend>
+  <depend>std_srvs</depend>
 
   <exec_depend>joy</exec_depend>
 
